manifests/route_access/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-route-pod
spec:
  containers:
    - image: ghcr.io/ocp-on-nerc/openshift-tests:latest
      name: test-container
      ports:
        - name: http
          containerPort: 8080
