manifests/route_access/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-route-service
spec:
  ports:
  - port: 8080
    targetPort: http
  selector:
    app: route_access
