manifests/route_access/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test-route
spec:
  to:
    kind: Service
    name: test-route-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
